Fix selects, align checkbox and other form-rows in admin, add back zmdi icons (whoops)

--- a/core/static/core/css/admin-secondary.css
+++ b/core/static/core/css/admin-secondary.css
@@ -139,3 +139,19 @@ td, th {
 textarea {
   height: auto !important;
 }
+
+.submit-row a.deletelink {
+  height: auto;
+}
+
+.form-row div.help {
+  /*padding-left: 0px !important;*/
+}
+
+*, *:before, *:after {
+  box-sizing: initial !important;
+}
+
+.aligned label {
+  width: 160px !important;
+}
